--- a/ngo-rest-api/package.json
+++ b/ngo-rest-api/package.json
@@ -8,20 +8,20 @@
   },
   "engines": {
     "node": ">=14.0.0 <15.0",
-    "npm": ">=6.14.0 <7.0"
+    "npm": ">=6.14.0"
   },
   "license": "Apache-2.0",
   "dependencies": {
-    "body-parser": "^1.17.1",
-    "cookie-parser": "^1.4.3",
-    "cors": "^2.8.3",
-    "express": "^4.15.2",
-    "express-session": "^1.15.2",
-    "fabric-ca-client": "^1.4.10",
-    "fabric-client": "^1.4.10",
-    "fs-extra": "^2.0.0",
-    "log4js": "^6.1.2",
-    "uuid": "^3.3.2",
-    "ws": "^6.2.2"
+    "body-parser": "^1.20.0",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "express": "^4.17.3",
+    "express-session": "^1.17.1",
+    "fabric-ca-client": "^2.2.12",
+    "fabric-client": "^1.4.20",
+    "fs-extra": "^10.1.0",
+    "log4js": "^6.4.5",
+    "uuid": "^8.3.2",
+    "ws": "^8.5.0"
   }
 }
