--- a/ngo-lambda/lambda-api-template.yaml
+++ b/ngo-lambda/lambda-api-template.yaml
@@ -154,7 +154,7 @@ Resources:
                 requestTemplates:
                   application/json: "{\n  \"functionType\": \"queryObject\",\n  \"chaincodeFunction\"\
                     : \"queryAllDonors\",\n  \"chaincodeFunctionArgs\": {},\n  \"fabricUsername\"\
-                    : \"lambdaUser\"\n}"
+                    : \"lambdaUser20\"\n}"
                 passthroughBehavior: "when_no_templates"
                 httpMethod: "POST"
                 contentHandling: "CONVERT_TO_TEXT"
@@ -180,7 +180,7 @@ Resources:
                     : \"createDonor\",\n  \"chaincodeFunctionArgs\": {\n      #set( $body\
                     \ = $util.parseJson($input.body) )\n      \"donorUserName\": \"$body.donorUserName\"\
                     ,\n      \"email\": \"$body.email\",\n      \"registeredDate\":\"$context.requestTime\"\
-                    \n  },\n  \"fabricUsername\": \"lambdaUser\"\n}"
+                    \n  },\n  \"fabricUsername\": \"lambdaUser20\"\n}"
                 passthroughBehavior: "when_no_templates"
                 httpMethod: "POST"
                 contentHandling: "CONVERT_TO_TEXT"
@@ -210,7 +210,7 @@ Resources:
                 requestTemplates:
                   application/json: "{\n  \"functionType\": \"queryObject\",\n  \"chaincodeFunction\"\
                     : \"queryDonor\",\n  \"chaincodeFunctionArgs\": {\n      \"donorUserName\"\
-                    : \"$input.params('donorUserName')\"\n  },\n  \"fabricUsername\": \"lambdaUser\"\
+                    : \"$input.params('donorUserName')\"\n  },\n  \"fabricUsername\": \"lambdaUser20\"\
                     \n}"
                 passthroughBehavior: "when_no_templates"
                 httpMethod: "POST"
